--- a/.gitignore
+++ b/.gitignore
@@ -2,17 +2,16 @@
 CMakeFiles/
 build/
 files.txt
-*.cmake
-CMakeCache.txt
-CMakeLists.txt
 Makefile
 makefile
+*.txt
+*.cmake
 *.mk
 *.gdb
 *.cbp
+*.pyc
 user.txt
 LeadSorterModul
 testScript.py
 wrapper/setup.py
 .gitignore.save
-python/__pycache__/sortFiles.cpython-35.pyc
